<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/office4"
            android:backgroundTint="#80FFFFFF"
            android:backgroundTintMode="src_over"
            android:padding="5dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="84dp"
            android:paddingRight="54dp">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question1_choice1"
                android:textSize="16sp"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question1_choice2"
                android:textSize="16sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question1_choice3"
                android:textSize="16sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/question1_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/question1_choice4"
                android:textSize="16sp"
                android:checked="false"/>

        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/answer"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/question2_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="answer"
            android:inputType="text" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question3_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/question3_choice1"
            android:textSize="16sp"
           />

        <CheckBox
            android:id="@+id/question3_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/question3_choice2"
            android:textSize="16sp"
            />

        <CheckBox
            android:id="@+id/question3_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/question3_choice3"
            android:textSize="16sp"
            />

        <CheckBox
            android:id="@+id/question3_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/question3_choice4"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question4"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/fourthQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question4_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question4_choice1"
                android:textSize="16sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/question4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question4_choice2"
                android:textSize="16sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/question4_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question4_choice3"
                android:textSize="16sp"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/question4_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question4_choice4"
                android:textSize="16sp"
                android:checked="false"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            android:text="Submit"
            android:onClick="submitAnswers"/>


    </LinearLayout>
</ScrollView>

